--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -465,7 +465,7 @@ en_AU:
     priority: "Priority"
     tab_menu_resolution: "Resolution"
     resolution: "Resolution Details"
-    t_add_new: "Add New"
+    t_add_new: "Create"
     status: "Status"
     t_closed: "Closed Work Orders"
     t_workorders: "Work Orders"
