--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -90,6 +90,7 @@ en_AU:
     access_denied: "You are not authorized to perform this action.This request has been logged."
     tab:
       notes: "Notes"
+    currently_logged_in_as: "Currently logged in as"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
