Updated change of status when assigned WO to user and when un-assigning user. Also worked on Suppliers and Products upgrade to simple_form.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -91,6 +91,8 @@ en_AU:
     tab:
       notes: "Notes"
     currently_logged_in_as: "Currently logged in as"
+    disabled: "Disabled"
+    change: "Change"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
