Added filters to Users and some JQuery functions

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -93,6 +93,7 @@ en_AU:
     currently_logged_in_as: "Currently logged in as"
     disabled: "Disabled"
     change: "Change"
+    filter: "Apply Filter"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -150,7 +151,7 @@ en_AU:
      list_users: "List of Users"
      edit_profile: "Edit My Details"
      add_new_user: "Create New User"
-     search: "Search Full Name"
+     search: "Filter by Full Name"
      name: "Full Name"
      name_eg: "eg: John Smith"
      t_log: "User Log"
@@ -167,6 +168,9 @@ en_AU:
        assignable: "Can this user be assigned Work Order Requests? Default is No."
      client: "User is a Client:"
      assignable: "Assignable to Work Orders?"
+     t_clients: "Clients"
+     search_by_role: "Filter by Role"
+     search_by_phone: "Filter by Phone"
   user_t_edit_user: "Edit User"
   role:
     admin: "Administrator"
