--- a/README.textile
+++ b/README.textile
@@ -37,25 +37,25 @@ h2. Setup database.yml file for development
 # SQLite3 setup - requires gem install
 development:
   adapter: sqlite3
-  database: db/dev.db
+  database: db/dev.sqlite3
 
 production:
   adapter: sqlite3
-  database: db/pro.db
+  database: db/pro.sqlite3
   
 # MySQL setup - Fill in your own username and password to access your local database
 production:
   adapter: mysql
   database: test_pro
   host: localhost
-  username:
-  password:
+  username:[username]
+  password:[password]
   encoding: utf8
 
 development:
   adapter: mysql
   database: test_dev
   host: localhost
-  username:
-  password:
+  username:[username]
+  password:[password]
   encoding: utf8
