Heaps of things changed and updated. to many to list. working on sub menu navigation and CSS stuff.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -19,6 +19,7 @@ en_AU:
       html: '<abbr title="Required">*</abbr>'
     error_notification:
       default_message: "Some errors were found, please take a look:"
+      login_error: "Username and/or Password are incorrect"
     # Labels and hints examples
     # labels:
     #   password: 'Password'
