--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -18,7 +18,7 @@ en_AU:
 #      html: '<abbr title="Required"><img height="8" src="/images/required_symbol.png" alt="Required Field"></abbr>'
       html: '<abbr title="Required">*</abbr>'
     error_notification:
-      default_message: "Some errors were found, please take a look:"
+      default_message: "There were some errors reported in your submission. Please check that all information is correct."
       login_error: "Username and/or Password are incorrect"
     # Labels and hints examples
     # labels:
