--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -102,6 +102,7 @@ en_AU:
     quick_links: "Quick Links"
     clients: "Client's"
     client: "Client's Name"
+    created_by: "Created by"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -179,6 +180,7 @@ en_AU:
      t_clients: "Clients"
      search_by_role: "By Role"
      search_by_phone: "By Phone"
+     active_wo: "Active WO's"
   user_t_edit_user: "Edit User"
   role:
     admin: "Administrator"
@@ -511,6 +513,10 @@ en_AU:
       client: "Name :"
       t_customer_details: "Customer Details"
     message_assigned_success: "Work Order Assigned Successfully!"
+    creating_wo_for: "Creating New Work Order Request for "
+    tab_menu_pending: "Pending"
+    index:
+      t_wo: "WO #"
   setting_business_name: "Business Name"
   setting_business_slogan: "Business Slogan"
   setting_business_number: "Business Number"
