--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -103,6 +103,9 @@ en_AU:
     clients: "Client's"
     client: "Client's Name"
     created_by: "Created by"
+    cancel_account: "Cancel Account"
+    module:
+      contact_us: "Contact Us"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -181,6 +184,9 @@ en_AU:
      search_by_role: "By Role"
      search_by_phone: "By Phone"
      active_wo: "Active WO's"
+     msg:
+       cancel_account: "Please call us to have you account deactivated."
+     cancel_account_button: "Cancel Account"
   user_t_edit_user: "Edit User"
   role:
     admin: "Administrator"
