Updated some errors in the replies to work order section. Also put in some log rotation in production mode. Still needs testing.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -115,6 +115,7 @@ en_AU:
     not_logged_in: "You must first log in or sign up before accessing this page."
     username: "Username"
     password: "Password"
+    invoices: "Invoices"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
