Invoice Section nearly completed.  Lots of refactoring out stuff from the controllers into helper methods.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -592,6 +592,7 @@ en_AU:
     create: "Create Invoice"
     billing_account: "Account ID:"
     billing_name: "Bill To:"
+    add_new_line: "Add a new line to the invoice"
   invoices:
     tab_menu_open: "Unpaid Invoices"
     tab_menu_paid: "Paid Invoices"
