Still dading fine grained, user customisable permissions and roles. Not fully implemented. Also making changes for Rails and Ruby updates.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -214,6 +214,9 @@ en_AU:
     t_name: "Role Type"
     id: "Role #"
     clerk: "Clerk"
+    tab:
+      basic: "Basic Role Info"
+      permissions: "Permissions"
   date:
     order:
      -  :day
