Added Copyright info and fixed numerous issues.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -110,7 +110,7 @@ en_AU:
     index: "List"
     invoice: "Invoice"
     priority_list: "Work Order Priority List"
-    edit_priority_list: "Edit Priority list Name"
+    edit_priority_list: "Editing Priority list "
     priority_name: "Priority List Name"
     not_logged_in: "You must first log in or sign up before accessing this page."
     username: "Username"
@@ -119,8 +119,8 @@ en_AU:
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
-   t_view: "View Supplier"
-   t_edit: "Edit Supplier"
+   t_view: "View Supplier "
+   t_edit: "Edit Supplier "
    t_add_new_supplier: "Add New Supplier"
    company_name: "Company Name"
    address: "Address"
