--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -401,6 +401,7 @@ en_AU:
         greater_than_start_date: "must be greater than start date"
         not_same_project: "doesn't belong to the same project"
         circular_dependency: "This relation would create a circular dependency"
+        record_invalid: "Validation failed: %{errors}"
       template:
         header:
           one:    "1 error prohibited this {%{model} from being saved"
