Many Updates and fixes.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -551,33 +551,33 @@ en_AU:
       t_wo: "WO #"
     tab_menu_re_opened: "Re-Opened"
     reply_posted_by: "Posted by"
-  setting_business_name: "Business Name"
-  setting_business_slogan: "Business Slogan"
-  setting_business_number: "Business Number"
-  setting_business_email: "Primary Email"
-  setting_business_phone: "Phone Number"
-  setting_business_toll_free: "Toll Free Number"
-  setting_business_mobile: "Mobile Number"
-  setting_business_fax: "Fax Number"
-  setting_business_address: "Address"
-  setting_business_city: "City"
-  setting_business_state: "State"
-  setting_business_zip: "Postcode"
-  setting_enable_tax: "Enable Tax"
-  setting_tax_rate: "Tax rate %"
-  setting_tax_type: "Tax Type"
-  setting_logout_limit: "Logout after inactivity enabled"
-  setting_version: "MyITCRM Version"
-  setting_business_contact_name: "Head Office Contact Name"
-  setting_business_contact_phone: "Head Office Contact Number"
-  setting_business_contact_email: "Head Office Contact Email"
-  setting_billing_address: "Head Office Address"
-  setting_billing_city: "Head Office City"
-  setting_billing_zip: "Head Office Postcode"
-  setting_billing_state: "Head Office State"
-  setting_billing_phone: "Head Office Phone"
-  setting_billing_fax: "Head Office Fax"
-  setting_enable_bill_to: "Enable Separate Bill To Details"
+  setting_business_name: "Business Names"
+  business_slogan: "Business Slogan"
+  business_number: "Business Number"
+  business_email: "Primary Email"
+  business_phone: "Phone Number"
+  business_toll_free: "Toll Free Number"
+  business_mobile: "Mobile Number"
+  business_fax: "Fax Number"
+  business_address: "Address"
+  business_city: "City"
+  _business_state: "State"
+  business_zip: "Postcode"
+  enable_tax: "Enable Tax"
+  tax_rate: "Tax rate %"
+  tax_type: "Tax Type"
+  logout_limit: "Logout after inactivity enabled"
+  version: "MyITCRM Version"
+  business_contact_name: "Head Office Contact Name"
+  business_contact_phone: "Head Office Contact Number"
+  business_contact_email: "Head Office Contact Email"
+  billing_address: "Head Office Address"
+  billing_city: "Head Office City"
+  billing_zip: "Head Office Postcode"
+  billing_state: "Head Office State"
+  billing_phone: "Head Office Phone"
+  billing_fax: "Head Office Fax"
+  enable_bill_to: "Enable Separate Bill To Details"
   naviagtion:
     users: "Users"
   setting_details: "Business Details"
