Updated with Security checking badge.

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 !http://myitcrm.com/images/logo.png!
 
-h2. Build Status: !https://secure.travis-ci.org/MyITCRM/myitcrm2.png?branch=master(Build Status)!:http://travis-ci.org/MyITCRM/myitcrm2
+h2. Build Status: !https://secure.travis-ci.org/MyITCRM/myitcrm2.png?branch=master(Build Status)!:http://travis-ci.org/MyITCRM/myitcrm2  !https://hakiri.io/github/MyITCRM/myitcrm2/Rails4.svg!:https://hakiri.io/github/MyITCRM/myitcrm2/Rails4
 
 h1. Welcome to MyIT CRM2 - The Next Stage!
 
